--- a/client/.env.example
+++ b/client/.env.example
@@ -1,5 +1,5 @@
 # API URL for development
-VITE_API_URL=http://localhost:3000
+VITE_API_URL=http://localhost:3000/api
 
 # For production, use your production API URL
 # VITE_API_URL=https://your-production-api.com 
